Name:                   Tyrion
Version:                0.1
Cabal-Version:          >= 1.8
Synopsis:               Deployment thing
Description:            Listens for push messages on AMQP from github and does stuff
Author:                 William Roe <willroe@gmail.com>
Build-type:             Simple

Executable tyrion
  Main-is:              tyrion.hs
  Hs-source-dirs:       src
  Build-Depends:        base,
                        bytestring,
                        hslogger,
                        process,
                        filepath,
                        attoparsec,
                        utf8-string,
                        aeson,
                        ConfigFile,
                        MissingH,
                        mtl,
                        unix,
                        haskell98,
                        amqp>=0.2.9

Executable testtypes
  Main-is:              testtypes.hs
  Hs-source-dirs:       src
  Build-Depends:        base,
                        attoparsec,
                        aeson>=0.3.2.11,
                        bytestring,
                        mtl

